--- a/src/markdown/mas/vergelijking_leefdaal.Rmd
+++ b/src/markdown/mas/vergelijking_leefdaal.Rmd
@@ -96,6 +96,8 @@ leefdaal %>%
   kable()
 ```
 
+**Conclusie**  
+  
 De oppervlaktes zijn gelijkaardig tussen alle deelgebieden.
 
 
@@ -132,18 +134,61 @@ mapview(leefdaal, zcol = "naam", layer.name = "Deelgebied") +
 We willen voor elk deelgebied het oppervlakte-aandeel van de beheerovereenkomsten.
 
 ```{r}
-bh_doelst_leefdaal <- landusemetrics_grid_cell(
+# Bereken proporties beheersdoelstellingen
+prop_bh_doelst_leefdaal <- landusemetrics_grid_cell(
     grid_cell = leefdaal,
     layer = bo2021_leefdaal,
     grid_group_by_col = "naam",
     layer_group_by_col = "BH_DOELST")
 
-srt_object_leefdaal <- landusemetrics_grid_cell(
+prop_srt_object_leefdaal <- landusemetrics_grid_cell(
     grid_cell = leefdaal,
     layer = bo2021_leefdaal,
     grid_group_by_col = "naam",
     layer_group_by_col = "SRT_OBJECT")
+
+# Maak designmatrix om afwezige beheersvormen toe te voegen
+design_bh_doelst <- expand.grid(prop_bh_doelst_leefdaal$naam, 
+                                prop_bh_doelst_leefdaal$BH_DOELST) %>% 
+  distinct() %>%
+  rename(naam = Var1, BH_DOELST = Var2)
+
+design_srt_object <- expand.grid(prop_srt_object_leefdaal$naam, 
+                                 prop_srt_object_leefdaal$SRT_OBJECT) %>% 
+  distinct() %>%
+  rename(naam = Var1, SRT_OBJECT = Var2)
+
+
+# Voeg afwezige beheersdoelstellingen toe aan dataframes
+bh_doelst_leefdaal <- prop_bh_doelst_leefdaal %>% 
+  full_join(design_bh_doelst, by = c("naam", "BH_DOELST")) %>%
+  replace(is.na(.), 0)
+
+srt_object_leefdaal <- prop_srt_object_leefdaal %>% 
+  full_join(design_srt_object, by = c("naam", "SRT_OBJECT")) %>%
+  replace(is.na(.), 0)
 ```
+
+```{r}
+bh_doelst_leefdaal %>%
+  ggplot(aes(x = naam, y = area_prop)) +
+    geom_bar(aes(fill = naam), stat = "identity") +
+    facet_wrap(~BH_DOELST, ncol = 2, scales = "free_y") +
+    labs(x = "", y = "oppervlakte-aandeel", title = "BH_DOELST") +
+    theme(legend.position = "", 
+          axis.text.x = element_text(angle = 90))
+
+srt_object_leefdaal %>%
+  ggplot(aes(x = naam, y = area_prop)) +
+    geom_bar(aes(fill = naam), stat = "identity") +
+    facet_wrap(~SRT_OBJECT, ncol = 3, scales = "free_y") +
+    labs(x = "", y = "oppervlakte-aandeel", title = "SRT_OBJECT") +
+    theme(legend.position = "", 
+          axis.text.x = element_text(angle = 90))
+```
+
+**Conclusie**  
+  
 
 
 
