--- a/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
+++ b/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
@@ -316,6 +316,23 @@ mas_clean <- mas_31370_pipeline1 %>%
 ```
 
 
+```{r sanity-check-on-distances}
+mas_controle_afstand <- mas_clean %>%
+  select(plotnaam, distance2plot, naam, jaar, waarnemer = waarneme) %>%
+  inner_join(design_2018_2022_sf %>% as_tibble(),
+             by = "plotnaam", suffix = c(".stip", ".telpunt")) %>%
+  mutate(calc_distance = st_distance(.$geometry.stip, .$geometry.telpunt,
+            by_element = TRUE),
+         calc_distance = units::drop_units(calc_distance)) %>%
+  mutate(
+    abs_verschil = abs(calc_distance - distance2plot),
+    verschil = ifelse(abs_verschil < 1, 
+                           "minder dan 1 m", "meer dan 1 m"))
+
+stopifnot(all(mas_controle_afstand$abs_verschil < 1.5))
+```
+
+
 # Gele kwikstaart 2022{#gele-kwik-2022}
 
 We starten met een beperkte dataset om het aantal broedparen van de Gele kwikstaart te modelleren. We beginnen met data exploratie en bouwen dan verschillende modellen op van simpel naar meer complexe modellen. 
