add targets store path

--- a/src/markdown/mas/vergelijking_leefdaal.Rmd
+++ b/src/markdown/mas/vergelijking_leefdaal.Rmd
@@ -27,6 +27,7 @@ library(terra)
 library(mapview)
 library(leafem)
 mbag_dir <- here()
+targets_store <- here("src", "targets", "mas_steekproef_pilootfase", "_targets")
 ```
 
 
